src/main/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo
spec:
  ingressClassName: nginx
  rules:
  - host: demo.localdev.me
    http:
      paths:
        - pathType: Prefix
          path: /
          backend:
            service:
              name: demo
              port:
                number: 8080
